feat: update endpoints and make usage of http2
